# Console

./: CMakeLists.txt
examples/: CMakeLists.txt  console.cpp
include/console/: console.hpp
src/: console_linux.cpp  console_windows.cpp
